[package]
name = "DataFrameMerger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = "0.38.1"
polars-lazy = "0.38.1"
fuzzy-matcher = "*"
rayon = "1.9.0"
csv = "1.3.0"
itertools = "0.12.1"
ordered-float = "4.2.0"
rust-fuzzy-search = "0.1.1"
polars-arrow = "0.38.3"
smartstring = "1.0.1"
